<resources>
    <string name="app_name">UNO Score Helper</string>
    <string name="txtBtnCrearJugadorAddJugador">Create Player</string>
    <string name="listo">Done</string>
    <string name="titleAgregarManoDialog">New Round</string>
    <string name="helpAgregarManoNoIndividual">Select who win this round</string>
    <string name="cancelar">Cancel</string>
    <string name="aceptar">Accept</string>
    <string name="titleBorrarJugadorDialog">Delete Player?</string>
    <string name="helpBorrarJugadorDialog">Are you sure you want to delete this player? if you accept all the matches in which they participates will be deleted</string>
    <string name="titleBorrarManoDialog">Delete Round?</string>
    <string name="helpBorrarManoDialog">NO SE USA</string>
    <string name="titleBorrarPartidaDialog">Delete Match?</string>
    <string name="helpBorrarPartidaDialog">Are you sure you want to delete this match? if you accept then it cannot be recovered</string>
    <string name="titleConfirmarManoDialog">Confirm Round?</string>
    <string name="helpConfirmarManoDialog">Confirm this round?</string>
    <string name="helpConfirmarManoDialogJugadoresNoClickeados">Confirm this round? Unassigned players will have 0 points this round</string>
    <string name="titleCrearJugadorDialog">Create Player</string>
    <string name="helpCrearJugadorDialog">Enter new player name</string>
    <string name="hintEditNombreJugadorDialog">Ingresar nombre</string>
    <string name="confirmar">Confirm</string>
    <string name="titleCrearReglaDialog">New Values</string>
    <string name="helpCrearReglaDialog">Enter the game type and the name of the set</string>
    <string name="unoClassic">Uno Classic</string>
    <string name="unoFlip">Uno Flip</string>
    <string name="hintEditNombreReglaDialog">Enter the name</string>
    <string name="titleEditPuntosCartaDialog">Edit card value</string>
    <string name="helpEditPuntosCartaDialog">Enter the new card value</string>
    <string name="hintEditPuntajeDialog">Enter score</string>
    <string name="titleFinalizarPartidaEmpateDialog">End match?</string>
    <string name="helpFinalizarPartidaEmpateDialog">There are tied players. You can leave them tied or draw their positions</string>
    <string name="sortear">Draw</string>
    <string name="empate">Tie</string>
    <string name="titleFinalizarPartidaDialog">End Match?</string>
    <string name="helpFinalizarPartidaDialog">Are you sure you want to end this match? If you accept then it will be deleted</string>
    <string name="titleAgregarPuntosManualDialog">Manual Entry</string>
    <string name="helpAgregarPuntosManualDialog">Enter the name of the new value set</string>
    <string name="hintEditAgregarPuntajeManualDialog">Enter score</string>
    <string name="titleReiniciarPartidaDialog">Restart match</string>
    <string name="helpReiniciarPartidaDialog">Are you sure you want to restart this match? This decision cannot be rollback</string>
    <string name="resultado">Results</string>
    <string name="partidaFinalizaEmpate">The match has end tied</string>
    <string name="andTheWinnerIs">The winner is\u0020</string>
    <string name="maxPuntajeEnJuego">Maximum Score:\u0020</string>
    <string name="reglasEnJuego">Values:\u0020</string>
    <string name="nuevaMano">New Round</string>
    <string name="finalizarPartida">End Match</string>
    <string name="reiniciarPartida">Restart Match</string>
    <string name="tipoJuegoSpinner">Game Type</string>
    <string name="crearJugador">Create Player</string>
    <string name="continuarPartida">CONTINUE MATCH</string>
    <string name="nuevaPartida">NEW MATCH</string>
    <string name="cargarPartida">LOAD MATCH</string>
    <string name="valoresPersonalizados">CUSTOMIZED VALUES</string>
    <string name="jugadores">PLAYERS</string>
    <string name="historial">HISTORY</string>
    <string name="jugador">Player:\u0020</string>
    <string name="puntajeMano">Score this round:\u0020</string>
    <string name="jugadoresSeleccionados">Selected Players</string>
    <string name="noHayJugadoresSeleccionados">NO PLAYERS SELECTED</string>
    <string name="addEditJugadores">Add / Edit players</string>
    <string name="selectReglas">Select Values</string>
    <string name="reglaNoSeleccionada">No Value Set Selected</string>
    <string name="puntuacionMaxima">MAXIMUM SCORE:\u0020</string>
    <string name="sinLimiteDePuntos">No Limit</string>
    <string name="infoJuegoIndividual">Each player scores themselves. When someone reaches the maximum score, is eliminated. The player with the lowest score wins</string>
    <string name="infoJuegoNoIndividual">Points of each players are added to the player who win the round. First player who reaches the maximum score wins</string>
    <string name="comenzarPartida">Start Match</string>
    <string name="editarCartas">Edit Cards</string>
    <string name="helpEditarCartas">Click to edit its value</string>
    <string name="agregandoManoA">Adding to:\u0020</string>
    <string name="nroMano">Round #</string>
    <string name="puntajeDeMano">Round Score:\u0020</string>
    <string name="puntos">\u0020points</string>
    <string name="entradaManual">MANUAL ENTRY</string>
    <string name="jugadorSpinner">Player</string>
    <string name="crearRegla">New value set</string>
    <string name="puntosGrid">Points:\u0020</string>
    <string name="partidasJugadas">Matches Played:\u0020</string>
    <string name="partidasGanadas">Matches Won:\u0020</string>
    <string name="juego">Game type:\u0020</string>
    <string name="estado">Status:\u0020</string>
    <string name="ganador">Winner:\u0020</string>
    <string name="sinLimite">No Limit</string>
    <string name="selectJugadores">Select Players</string>
    <string name="editarJugadores">Edit Players</string>
    <string name="elJugador">The player\u0020</string>
    <string name="yaExiste">\u0020alredy exist</string>
    <string name="juegoIndividual">Each player get the points of their cards</string>
    <string name="juegoNoIndividual">Each player scores the player who win the round</string>
    <string name="tipoJuegoNoSeleccionado">Select the game type</string>
    <string name="puntajeNoIngresado">Enter a valid score</string>
    <string name="nombreReglaVacio">The name cannot be empty</string>
    <string name="sumadoA">Adding to:\u0020</string>
    <string name="haGanadoMano">Has win the round</string>
    <string name="Reglas">Values:\u0020</string>
    <string name="editarRegla">Edit values</string>
    <string name="helpEditarValores">Are you sure you want to delete this values? Matches who uses it will be deleted</string>
    <string name="borrarJugadorMenu">Delete Player</string>
    <string name="borrarPartidaMenu">Delete Match</string>
    <string name="borrarReglaMenu">Delete Values</string>
    <string name="borrarRegla">Delete values?</string>
    <string name="helpBorrarRegla">Are you sure you want to delete this values? Matches who uses it will be deleted</string>
    <string name="helpSelectPlayers">Select at least two players</string>
    <string name="NuevaPartida">New Match</string>
    <string name="AgregarJugador">Add Players</string>
    <string name="CartasJugadas">Round details</string>
    <string name="EditarMano">Edit Round</string>
    <string name="Jugadores">Players</string>
    <string name="NuevaMano">New Round</string>
    <string name="NuevaRegla">New Values</string>
    <string name="PartidaEnJuego">Match</string>
    <string name="Valores">Customized Values</string>
    <string name="SeleccionarValores">Select Values</string>
    <string name="DetalleJugador">Player Details</string>
    <string name="titleContinuarPartidaDialog">Continue Match?</string>
    <string name="helpContinuarPartidaDialog">A player has won the match. You want to continuo or end this match?</string>
    <string name="continuar">Continue</string>
    <string name="finalizar">Finish</string>
    <string name="eliminarUltimaMano">Delete last round</string>
    <string name="titleBorrarUltimaMano">Delete last round?</string>
    <string name="helpBorrarUltimaMano">Are you sure you want to delete last round? This decision cannot be rollback</string>
    <string name="nombreVacio">The name cannot be empty</string>
    <string name="noSeleccionaTipoJuego">Select the game type</string>
    <string name="noSeSeleccionoPuntaje">Enter a valid score</string>
    <string name="errorTamano">Select at least two players</string>
    <string name="resultadoPartida">Match Result:\u0020</string>
    <string name="cantidadRondas">Rounds:\u0020</string>
    <string name="gana">\u0020Wins</string>
    <string name="finalizada">Finished</string>
    <string name="enCurso">In Progress</string>
    <string name="tipoJuego">Choose game type</string>
    <string name="ingresarPuntajeCorrecto">Enter a valid score</string>
</resources>