<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/rounded_dialog">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titleContinuarPartidaDialog"
        android:textSize="20sp"
        android:layout_marginVertical="12dp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_marginHorizontal="8dp">
    </TextView>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginBottom="12dp"
        android:text="@string/helpContinuarPartidaDialog">
    </TextView>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="8dp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/continuar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/continuar">
        </RadioButton>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/finalizar">
        </RadioButton>

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/continuarPartidaDialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/aceptar"
            android:layout_gravity="bottom"
            android:textColor="#FFFFFF"
            android:background="@drawable/button_confirm_dialog">
        </Button>

    </LinearLayout>

</LinearLayout>