<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/rounded_dialog">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titleBorrarJugadorDialog"
        android:textSize="20sp"
        android:layout_marginVertical="12dp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_marginHorizontal="8dp">
    </TextView>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginBottom="12dp"
        android:text="@string/helpBorrarJugadorDialog">
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/cancelarBorradoJugador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancelar"
            android:layout_gravity="bottom"
            android:textColor="#FFFFFF"
            android:background="@drawable/button_cancel_finalizar">
        </Button>

        <Button
            android:id="@+id/aceptarBorradoJugador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/aceptar"
            android:layout_gravity="bottom"
            android:textColor="#FFFFFF"
            android:background="@drawable/button_confirm_finalizar">
        </Button>

    </LinearLayout>

</LinearLayout>