<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/rounded_dialog">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resultado"
        android:textSize="20sp"
        android:layout_marginVertical="12dp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_marginHorizontal="8dp">
    </TextView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textoEmpate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginBottom="12dp"
            android:text="@string/partidaFinalizaEmpate"
            android:textAlignment="center">
        </TextView>

        <LinearLayout
            android:id="@+id/layoutGanador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:src="@drawable/primero"
                android:layout_gravity="center">
            </ImageView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginVertical="12dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_centerHorizontal="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/andTheWinnerIs"
                        android:textAlignment="center">
                    </TextView>

                    <TextView
                        android:id="@+id/textoGanador"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:ellipsize="end"
                        android:maxLines="1">
                    </TextView>

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/aceptarFinalizar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aceptar"
            android:layout_gravity="bottom"
            android:textColor="#FFFFFF"
            android:background="@drawable/button_confirm_dialog">
        </Button>

    </LinearLayout>

</LinearLayout>